# Ultimarc-linux

./: .autotools  .cproject  .gitignore  .project  21-ultimarc.rules  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.cfg  README.debbuild  README.fw  README.md  README.rpmbuild  aclocal.m4  autogen.sh  config.status  configure  configure.ac  d208.pcap  ultimarc-0.1.pc  ultimarc-linux.spec  ultimarc.pc.in  ultimarc.spec
autom4te.cache/: output.1  requests  traces.0  traces.1
debian/: README.Debian  changelog  control  copyright  docs  install  rules
linux-kernel/: Makefile  ultimarc.c
scripts/: aimtrak_readme  aimtrak_setup.py
src/.deps/: Ultimarc-linux.Po
src/libs/: Makefile.am  Makefile.in  common.c  common.h  dbg.h  ipac.c  ipac.h  ipac4.c  ipac4.h  ipacseries.c  ipacseries.h  ipacultimate.c  ipacultimate.h  libultimarc.c  libultimarc.h  libultimarc.h.in  pacLED.c  pacLED.h  pacdrive.c  pacdrive.h  servostik.c  servostik.h  uhid.c  uhid.h  ulboard.c  ulboard.h  ultimarc.c  ultimarc.h  ultistik.c  ultistik.h  ultrastik.c  ultrastik.h  usbbutton.c  usbbutton.h
src/test/: invalid_format.json  ipac_invalid_keys_entry.json  ipac_invalid_no_keys.json  ipac_invalid_wrong_number_of_keys.json  ipac_series_invalid_config.json  ipac_series_invalid_pin_options.json  ipac_ultimate_invalid_fade_rate_1.json  ipac_ultimate_invalid_fade_rate_2.json  ipac_ultimate_invalid_fade_rate_3.json  ipac_ultimate_invalid_flash_rate_2.json  ipac_ultimate_invalid_flash_rate_3.json  pacLED_invalid_board_id.json  pacLED_invalid_current_board_id_1.json  pacLED_invalid_current_board_id_2.json  pacLED_invalid_fade_1.json  pacLED_invalid_fade_2.json  pacLED_invalid_fade_3.json  pacLED_invalid_intensity_1.json  pacLED_invalid_intensity_2.json  pacLED_invalid_intensity_3.json  pacLED_invalid_missing_board_id.json  pacLED_invalid_new_board_id_1.json  pacLED_invalid_new_board_id_2.json  pacLED_invalid_states_random.json  pacdrive_invalid_led_1.json  pacdrive_invalid_led_2.json  pacdrive_invalid_led_3.json  product_invalid.json  product_invalid_missing.json  product_invalid_not_a_string.json  start.json  ultistik_invalid_borders_1.json  ultistik_invalid_borders_2.json  ultistik_invalid_controller_id.json  ultistik_invalid_flash_1.json  ultistik_invalid_map_3.json  ultistik_invalid_map_size_1.json  ultistik_invalid_restrictor_1.json  ultrastik_invalid_map_1.json  ultrastik_invalid_map_2.json  (+6 more)
src/umtool/: Makefile  Makefile.am  Makefile.in  hid-example  hid-example.c  ipac.json  ipac2.json  ipac2_2014_TestMacro.json  ipac2_2014_default.json  ipac2_2015.json  ipac2_2015_TestMacro.json  ipac2_2015_default.json  ipac2_default.json  ipac4.json  ipac4_2014_default.json  ipac4_2015_default.json  ipac4_default.json  ipacultimate_config.json  ipacultimate_led.json  ipacultimate_pins.json  jpac.json  jpac_2014_default.json  jpac_2015_default.json  jpac_default.json  main.c  minipac.json  minipac_2014_default.json  minipac_2015_default.json  multiple.json  pacLED.json  pacLED_all.json  pacLED_config.json  pacLED_random.json  pacdrive.json  u-hid.json  u-hid_nano.json  ultistik.json  ultistik_2014_config.json  ultistik_2014_map2way.json  ultistik_2015_analog.json  (+23 more)
src/umtool/.deps/: main.Po
